--- a/Assets/CSS/index.css
+++ b/Assets/CSS/index.css
@@ -1,12 +1,18 @@
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 body {
+  width: 100vw;
+  height: 100vh;
   font-family: "Poppins", sans-serif;
   font-weight: 400;
   font-style: normal;
+  overflow-x: hidden;
 }
+
+
 .navbar {
   width: 100%;
   height: 80px;
@@ -166,10 +172,11 @@ body {
 }
 .arrival {
   width: 100%;
-  height: 100%;
+  /* height: 100%; */
   display: flex;
   justify-content: center;
   margin-top: 250px;
+  font-size: 50px;
 }
 .grid {
   width: 65%;
@@ -256,20 +263,21 @@ body {
   color: white;
 }
 .bgimg{
-  height: 600px;
+  height: 350px;
   width: 100%;
   display: flex;
   align-items: center;
   justify-content: space-evenly; 
-  margin-top: 150px;
+  margin-top: 20%;
 }
 
 .table{
+
   display: flex;
   flex-direction: column;
   justify-content: center;
-  width: 46%;
-  height: 80%;
+  width: 45%;
+  height: 100%;
   position: relative;
   overflow: hidden; 
 }
@@ -289,14 +297,14 @@ body {
   left: 20px;
   text-decoration: underline;
   position: absolute;
-  top: 280px;
+  top: 200px;
 }
 .table1{
   display: flex;
   flex-direction: column;
   justify-content: center;
-  width: 46%;
-  height: 80%; 
+  width: 45%;
+  height: 100%; 
   position: relative;
   overflow: hidden;
 }
@@ -316,7 +324,7 @@ body {
   left: 20px;
   text-decoration: underline;
   position: absolute;
-  top: 280px;
+  top: 200px;
 }
 
 .navmenu{
@@ -342,60 +350,6 @@ body {
   gap: 20px;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
-
-
-/* .proimg{
-  width: 50%;
-  height: 100%;
-  display: flex;
-  align-items: center;
-  flex-direction: column;
-  gap: 15px;
-} */
-
-/* .img1{
-  width: 250px;
-  height: 250px;
-}
-
-.img2{
-  width: 250px;
-  height: 250px;
-  opacity: 0;
-}
-.icons{
-  right: 5%;
-  top: 10%;
-  display: flex;
-  flex-direction: column;
-  gap: 20px;
-  font-size: 15px;
-}
-.b-icons{ */
-  /* position: absolute;
-  bottom: 10%;
-  display: flex;
-  flex-direction: column;
-  gap: 20px;
-  font-size: 50px;
-}
-.proimg:hover .img2{
-  opacity: 1;
-}
-.w-pro{
-  width: 90%;
-  height: 100%;
-  display: flex;
-  margin: 0 auto;
-
-}
-.grid2{
-  width: 30%;
-  height: 100%;
-}
-.grid2 img{
-  width: 100%;
-}  */
 .w-pro{
   width: 95%;
   height: 100vh;
@@ -548,7 +502,10 @@ body {
   color: white;
   transition: 0.5s;
 }
-
+.gal{
+  width: 100%;
+  height: 100%;
+}
 .g-gallery{
   width: 100%;
   height: 20vh;
@@ -556,16 +513,17 @@ body {
   align-items: center;
   justify-content: center;
   margin-top: 150px;
-  font-size: 28px;
+  font-size: 55px;
   
 }
 .galleryimg{
-  width: 98%;
-  height: 100%;
+  width: 95%;
+  height: 50%;
   display: flex;
   justify-content: space-between;
   margin: 0 auto;
   overflow: hidden;
+  margin-top: 50px;
   
 }
 .galleryimg img{
@@ -578,30 +536,39 @@ body {
 }
 .wholeadress{
   width: 100%;
-  height: 100%;
+  height: 500px;
   display:flex;
   align-items: center;
   justify-content: space-evenly;
+
+  margin-top: 60px;
   
 }
 .adress{
   width: 90%;
   height: 100%;
-  margin-top: 200px;
   display: flex;
   justify-content: space-evenly;
   align-items: center;
-}
 
+}
+.whle{
+  width: 100%;
+  height: 60%;
+  display: flex;
+  justify-content: space-between;
+
+}
 .furstore{
-  width: 40%;
+  width: 30%;
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
-  height: 350px;
+
+ 
 }
 .furstore img{
-  width: 250px;
+  width: 200px;
 }
 .fur{
   width: 60%;
@@ -619,7 +586,6 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
-  height: 350px;
   align-items: center;
 }
 .c-service{
@@ -627,7 +593,6 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
-  height: 350px;
   align-items: center;
 }
 .suprt{
@@ -635,7 +600,7 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
-  height: 350px;
+  /* height: 350px; */
   align-items: center;
 }
 .icn{
@@ -644,7 +609,8 @@ body {
   gap: 20px;
 }
 .newsletter{
-  gap: 200px;
+  width: 30%;
+  margin-top: 40px;
  
 }
 .btn2{
@@ -676,7 +642,84 @@ body {
 .newsletter input{
   font-size: 20px;
 }
+.menu-icn{
+  display: none;
+}
 
-@media(max-width:1200px){
+@media(max-width:1000px){
+  .navbar{
+    width: 100%;
+    
+  }
+  .menu-icn{
+    font-size: 20px;
+    display: block;
+  }
+  .nav-menus{
+    display: none;
+  }
+  .nav-img{
+    width: 20%;
+  }
+  .nav-logo i{
+    font-size: 20px;
+   
+  }
+  .nav-logo{
+    width: 80%;
+    justify-content: end;
+    gap:30px;
+
+  }
+  .b-img{
+    width: 100%;
+    height: 450px;
+    background-position: center;
+  }
+  .Products{
+    flex-direction: column;
+    gap: 60px;
+    height: 100%;
+    align-items: center;
+  }
+  .flower{
+    width: 80%;
+  }
+  .options{
+    width: 90%;
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    
+  }
+  .border{
+    width: 100%;
+  }
+  .mirror{
+    width: 100%;
+    height: 100%;
+  }
   
+  .new-arrival{
+    flex-direction: column;
+  }
+  .grid{
+    width: 90%;
+    height: 100%;
+    display: grid;
+    grid-template-columns: repeat(2,3fr);
+    gap: 100px;
+  }
+
+  .w-pro{
+    flex-direction: column;
+    height: 100%;
+    display: grid;
+
+  }
+ 
+  .pro1{
+    order: 2;
+  
+  }
+ 
 }
